# watchmen-matryoshka-doll

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  app.py  docker-compose.yml  pyproject.toml  requirements.txt  rotating.log.1
.github/workflows/: codeql-analysis.yml  publish-image.yml
api_tests/: watchmen.postman_collection.json
assert/data/: instance_data.json  policy.json  report_test_customer.json  report_test_policy.json  topic.json
distributions/docker/: Dockerfile
doc/guide/: doll-guide.md
lib/: test_data_import.py  test_generate_schema.py  test_rule_import.py
lib/connector/: local_connector.py
lib/features/: feature_processor.py
lib/knowledge/: knowledge_loader.py  topic.py
lib/match/: lexicon_matcher.py
lib/model/: model_relationship.py  model_schema.py  rule_context.py
lib/service/: generate_schema.py  import_data.py  import_rule.py
mongo/: Dockerfile
mongo/init-db.d/: seed.js
presto/: Dockerfile
presto/config/: config.properties  jvm.config  log.properties
test/data/: policy.json  schema.json
tests/: __init__.py  test_common.py  test_convert_template.py  test_core_path.py  test_data_import.py  test_factor_engine.py  test_generate_schema.py  test_index.py  test_init.py  test_knowledge.py  test_pipeline.py  test_report.py  test_rule_import.py  test_topic_matcher.py  test_topics_storage.py
tests/common/: test_common.py  test_generate_sql.py
tests/pipeline/: test_generate_stage.py  test_run_pipeline.py
tests/routers/: test_admin.py  test_console.py
tests/storage/: test_space_storage.py
watchmen/: Dockerfile  __init__.py  index.py  main.py  requirements.txt  test_data_import.py  test_factor_engine.py  test_generate_schema.py  test_pipeline.py  test_rule_import.py
watchmen/auth/: index.py  tenant.py  token.py  user.py  user_group.py
watchmen/collection/: index.py
watchmen/common/: __init__.py  alarm.py  data_page.py  deps.py  mongo_model.py  pagination.py  parameter.py  sql_convert.py  watchmen_model.py
watchmen/config/: config.py
watchmen/connector/: local_connector.py
watchmen/database/: find_storage_template.py  topic_utils.py
watchmen/entity/: data_entity.py  data_entity_set.py  data_relationship.py  object_id.py  pagination.py
watchmen/event/: event.py  index.py
watchmen/knowledge/: __init__.py  knowledge_loader.py  topic.py
watchmen/lake/: model_relationship.py  model_schema.py  model_schema_set.py
watchmen/mapping/: index.py  mapping_engine.py  mapping_rule.py  topic_mapping_rule.py
watchmen/master/: index.py  master_schema.py  master_space.py
watchmen/match/: entity_matcher.py  lexicon_matcher.py
watchmen/model/: context.py  model_field.py  model_schema.py  rule_context.py
watchmen/monitor/: __init__.py  index.py
watchmen/parser/: console_paramter_parser.py  constants.py  date_utility.py  parameter_parser.py  utils.py
watchmen/pipeline/: index.py  pipeline.py  spark_pipeline.py  stage_constants.py
watchmen/plugin/: address.py  address_en_parser.py  address_ja.py  date_of_birth_parser.py  langid_detect.py
watchmen/quality/: index.py
watchmen/raw_data/: context.py  data_entity.py  lake_data_storage.py  mapping.py  model_field.py  model_relationship.py  model_schema.py  model_schema_set.py  rule_context.py  rule_schema.py
watchmen/raw_data 2/: model_relationship.py  model_schema_set.py
watchmen/raw_data_back/: model_schema.py  rule_context.py
watchmen/routers/: admin.py  auth.py  cache.py  common.py  console.py  consume.py  data_patch.py  index.py  metadata.py  monitor.py  pipeline.py
watchmen/row_data/: model_relationship.py  model_schema.py  model_schema_set.py  rule_context.py
watchmen/schema/: model_field.py  model_schema.py  (+4 more)
(+436 files in other folders)
