[tool.poetry]
name = "watchmen-data-processor"
version = "0.1.0"
description = ""
authors = ["luke0623 <luke0623@outlook.com>"]



[tool.poetry.dependencies]
python = "^3.9.2"
fastapi = "^0.63.0"
pypika = "^0.47.3"
pendulum = "^2.1.2"
dask = "^2021.1.0"
bson = "^0.5.10"
regex = "^2020.11.13"
jose = "^1.0.0"
python-jose = "^3.2.0"
passlib = "^1.7.4"
python-dotenv = "^0.15.0"
jsonschema = "^3.2.0"
distributed = "^2021.1.0"
python-multipart = "^0.0.5"
bcrypt = "^3.2.0"
trino = "^0.305.0"
nose = "^1.3.7"
langid = "^1.1.6"
uvicorn = "^0.13.4"
japanese_address = "^0.1.2"
pandas = "^1.2.3"
SQLAlchemy = "^1.4.2"
notifiers = "^1.2.1"
arrow = "^1.1.0"
mysqlclient = {version = "^2.0.3", optional = true}
pymongo = {version = "^3.11.4", optional = true}
kafka-python = {version = "^2.0.2", optional = true}
aiokafka = {version = "^0.7.1", optional = true}
aio-pika = {version = "^6.8.0", optional = true}
cacheout = "^0.13.1"
presto-python-client = "^0.8.2"

[tool.poetry.extras]
mysql = ["mysqlclient"]
mongo = ["pymongo"]
kafka = ["kafka-python","aiokafka"]
rabbit= ["aio-pika"]


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
